Fix for https://svn.eionet.europa.eu/projects/Reportnet/ticket/2458